[imad-console] Updates ui/article-one.html

--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -3,6 +3,8 @@
     <title>
         Article One, Navjit Singh.
     </title>
+    
+    <meta name = "viewport" content = "width = device-width", "intital-scale = 1"/>
 </head>
 
 <body>
