--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -4,7 +4,7 @@
         Article One, Navjit Singh.
     </title>
     
-    <meta name = "viewport" content = "width = device-width", "intital-scale = 1"/>
+    <meta name = "viewport" content = "width = device-width", "initial-scale = 1"/>
 </head>
 
 <body>
