[imad-console] Updates ui/article-two.html

--- a/ui/article-two.html
+++ b/ui/article-two.html
@@ -6,10 +6,13 @@
     
 
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
+<style>
+    
+</style>
 </head>
 
 <body>
+    <dev>
     <dev>
     <a href ='/'>Home</a>
     </dev>
@@ -37,5 +40,6 @@
             This is contect for article Two.
         </p>
     </dev>
+</dev>
 </body>
 </html>
