--- a/ui/article-two.html
+++ b/ui/article-two.html
@@ -7,12 +7,17 @@
 
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <style>
-    
+    .container{
+        max-width: 800px;
+        margin: 0 auto;
+        color: grey;
+        font-family: sans-serif;
+    }
 </style>
 </head>
 
 <body>
-    <dev>
+    <dev class="container">
     <dev>
     <a href ='/'>Home</a>
     </dev>
