[imad-console] Updates ui/article-two.html

--- a/ui/article-two.html
+++ b/ui/article-two.html
@@ -8,10 +8,13 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <style>
     .container{
-        max-width: 300px;
-        margin: 0 auto;
-        color: grey;
-        font-family: sans-serif;
+    max-width: 300px;
+    margin: 0 auto;
+    color: #151414;
+    font-family: sans-serif;
+    padding-top: 60px;
+    padding-left: 20px;
+    padding-right: 60px;
     }
 </style>
 </head>
