--- a/ui/article-two.html
+++ b/ui/article-two.html
@@ -9,7 +9,7 @@
 <style>
     .container{
     max-width: 800px;
-    margin: 0 auto;
+    margin: auto;
     color: #151414;
     font-family: sans-serif;
     padding-top: 60px;
