[imad-console] Updates ui/article-one.html

--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -6,10 +6,22 @@
     
 
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<style>
+    .container{
+    max-width: 800px;
+    margin:0 auto;
+    color: #151414;
+    font-family: sans-serif;
+    padding-top: 60px;
+    padding-left: 20px;
+    padding-right: 20px;
+    }
+</style>
 
 </head>
 
 <body>
+    <dev class="container">
     <dev>
     <a href ='/'>Home</a>
     </dev>
@@ -34,5 +46,6 @@
             This is the actal content that I want to write on my website. Let's see how it looks on the website. This is going to be awesome, I am already tellin you this and this is going to be great.This is the actal content that I want to write on my website. Let's see how it looks on the website. This is going to be awesome, I am already tellin you this and this is going to be great.This is the actal content that I want to write on my website. Let's see how it looks on the website. This is going to be awesome, I am already tellin you this and this is going to be great.This is the actal content that I want to write on my website. Let's see how it looks on the website. This is going to be awesome, I am already tellin you this and this is going to be great.
         </p>
     </dev>
+</dev>
 </body>
 </html>
