--- a/ui/article-two.html
+++ b/ui/article-two.html
@@ -6,17 +6,7 @@
     
 
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<style>
-    .container{
-    max-width: 800px;
-    margin:0 auto;
-    color: #151414;
-    font-family: sans-serif;
-    padding-top: 60px;
-    padding-left: 20px;
-    padding-right: 20px;
-    }
-</style>
+        <link href="/ui/style.css" rel="stylesheet" />
 </head>
 
 <body>
