--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -27,13 +27,13 @@
     
     <dev>
         <p>
-            This is the actal content that I want to write on my website. Let's see how it looks on the website. This is going to be awesome, I am already tellin you this and this is going to be great.This is the actal content that I want to write on my website. Let's see how it looks on the website. This is going to be awesome, I am already tellin you this and this is going to be great.This is the actal content that I want to write on my website. Let's see how it looks on the website. This is going to be awesome, I am already tellin you this and this is going to be great.This is the actal content that I want to write on my website. Let's see how it looks on the website. This is going to be awesome, I am already tellin you this and this is going to be great.
+            This is the actal content that I want to write on my website. Let's see how it looks on the website. This is going to be awesome, I am already tellin you this and this is going to be great.This is the actal content that I want to write on my website. Let's see how it looks on the website. This 
         </p>
         <p>
-            This is the actal content that I want to write on my website. Let's see how it looks on the website. This is going to be awesome, I am already tellin you this and this is going to be great.This is the actal content that I want to write on my website. Let's see how it looks on the website. This is going to be awesome, I am already tellin you this and this is going to be great.This is the actal content that I want to write on my website. Let's see how it looks on the website. This is going to be awesome, I am already tellin you this and this is going to be great.This is the actal content that I want to write on my website. Let's see how it looks on the website. This is going to be awesome, I am already tellin you this and this is going to be great.
+            This is the actal content that I want to write on my website. Let's see how it looks on the website. This is going to be awesome, I am already tellin you this and this is going to be great.This is the actal content that I want to write on my website.
         </p>
         <p>
-            This is the actal content that I want to write on my website. Let's see how it looks on the website. This is going to be awesome, I am already tellin you this and this is going to be great.This is the actal content that I want to write on my website. Let's see how it looks on the website. This is going to be awesome, I am already tellin you this and this is going to be great.This is the actal content that I want to write on my website. Let's see how it looks on the website. This is going to be awesome, I am already tellin you this and this is going to be great.This is the actal content that I want to write on my website. Let's see how it looks on the website. This is going to be awesome, I am already tellin you this and this is going to be great.
+            This is the actal content that I want to write on my website. Let's see how it looks on the website. This is going to be awesome,
         </p>
     </dev>
 </dev>
