[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -11,6 +11,9 @@
         <div class="center text-big bold">
             Kidan mitro.
         </div>
+        <script>
+            alert('Hi I am Big Brother');
+        </script>
         <script type="text/javascript" src="/ui/main.js">
         </script>
     </body>
