--- a/ui/index.html
+++ b/ui/index.html
@@ -4,16 +4,30 @@
         <link href="/ui/style.css" rel="stylesheet" />
     </head>
     <body>
-        <div id ="madi" class="center">
-            <img src="/ui/madi.png" class="img-medium"/>
+        <div class ="container">
+            <div id ="madi" class="center">
+                <img src="https://pbs.twimg.com/profile_images/786256101192847360/7Dc80FKa_400x400.jpg" class="img-medium"/>
+            </div>
+            <br>
+            <hr/>
+            <h3>Personal Information</h3>
+            <div>
+                Hello, This is Navjit Singh.
+            </div>
+            <hr/>
+            <h3>Professional</h3>
+            <div>
+                I am a Lecturer.
+            </div>
+            <hr/>
+            <div class="footer">
+                
+            </div>
+            <div  id = 'main-text' class="center text-big bold">
+                Kidan mitro.
+            </div>
         </div>
-        <br>
-        <div  id = 'main-text' class="center text-big bold">
-            Kidan mitro.
-        </div>
-        <script>
-            alert('Hi I am Big Brother');
-        </script>
+
         <script type="text/javascript" src="/ui/main.js">
         </script>
     </body>
