--- a/ui/index.html
+++ b/ui/index.html
@@ -21,7 +21,7 @@
             </div>
             <hr/>
             <div class="footer">
-                
+               This button <button id="center"> Ooch!</button> has been clicked <span id="count">0</span> times.
             </div>
             <div  id = 'main-text' class="center text-big bold">
                 Kidan mitro.
