--- a/ui/index.html
+++ b/ui/index.html
@@ -5,8 +5,8 @@
     </head>
     <body>
         <div class ="container">
-            <div id ="madi" class="center">
-                <img src="https://pbs.twimg.com/profile_images/786256101192847360/7Dc80FKa_400x400.jpg" class="img-medium"/>
+            <div class="center">
+                <img id ="madi" src="https://pbs.twimg.com/profile_images/786256101192847360/7Dc80FKa_400x400.jpg" class="img-medium"/>
             </div>
             <br>
             <hr/>
