--- a/ui/index.html
+++ b/ui/index.html
@@ -32,6 +32,15 @@
             
             <div class="footer">
                This button <button id="counter"> Ooch!</button> has been clicked <span id="count">0</span> times.
+               <hr/>
+               <input type ="text" id = "name" placeholder = "name"> </input>
+               <input type = "Submit" value= "Submit"></input>
+               
+               <ul>
+                   <li>name1</li>
+                   <li>name2</li>
+                   <li>name3</li>
+               </ul>
             </div>
 
         </div>
