--- a/ui/index.html
+++ b/ui/index.html
@@ -34,12 +34,10 @@
                This button <button id="counter"> Ooch!</button> has been clicked <span id="count">0</span> times.
                <hr/>
                <input type ="text" id = "name" placeholder = "name"> </input>
-               <input type = "Submit" value= "Submit"></input>
+               <input type = "Submit" id = "submit_btn" value= "Submit"></input>
                
-               <ul>
-                   <li>name1</li>
-                   <li>name2</li>
-                   <li>name3</li>
+               <ul id="namelist">
+
                </ul>
             </div>
 
